[gd_scene load_steps=17 format=3 uid="uid://qbsju6hilk7f"]

[ext_resource type="Script" uid="uid://5mhq51h6i6eh" path="res://lose_screens/lose_screen.gd" id="1_n85ce"]
[ext_resource type="Texture2D" uid="uid://bedkfmy4q02ys" path="res://art/Untitled 07-23-2025 12-07-23 (1).png" id="2_b6wcl"]
[ext_resource type="Texture2D" uid="uid://cbsew455ofco6" path="res://art/Untitled 07-18-2025 12-49-32.png" id="3_2p1h2"]
[ext_resource type="Texture2D" uid="uid://4xiq0pqxo6yh" path="res://art/alien1.png" id="4_0hv5d"]
[ext_resource type="Texture2D" uid="uid://b3ol0ba8mpf8a" path="res://art/alien2.png" id="5_qsbgq"]
[ext_resource type="Texture2D" uid="uid://bpqv4y8n6yaed" path="res://art/Asteroid Brown.png" id="6_sm0vp"]
[ext_resource type="Texture2D" uid="uid://ckpxwh5ixx7oc" path="res://art/Untitled 07-17-2025 11-39-14 (1).png" id="7_uqle6"]
[ext_resource type="FontFile" uid="uid://dxtfpitcxe58o" path="res://art/GrapeSoda.ttf" id="8_dtoth"]
[ext_resource type="Texture2D" uid="uid://blvorfg3ijg05" path="res://art/asteroid_Brown2.png" id="9_uyq1r"]
[ext_resource type="Texture2D" uid="uid://d1gkiaxgb7bp" path="res://art/Alien_Ship.png" id="10_mxi48"]
[ext_resource type="AudioStream" uid="uid://befpkcnh73b4b" path="res://audio/music/03 Game Over.mp3" id="11_6iog5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yaehf"]
texture = ExtResource("2_b6wcl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_074og"]
bg_color = Color(0.0819648, 0.282661, 0.384163, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cegan"]
bg_color = Color(0.0819648, 0.282661, 0.384163, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ps0j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2edh"]
bg_color = Color(0.0819648, 0.282661, 0.384163, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Lose_screen_3" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n85ce")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 122.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_yaehf")

[node name="Bullet" type="Sprite2D" parent="."]
position = Vector2(117.621, 114.358)
rotation = -0.418353
scale = Vector2(0.317931, 0.412525)
texture = ExtResource("3_2p1h2")

[node name="Bullet2" type="Sprite2D" parent="Bullet"]
position = Vector2(53.3336, -2.94812)
texture = ExtResource("3_2p1h2")

[node name="Bullet3" type="Sprite2D" parent="Bullet"]
position = Vector2(-7.0415, -49.1912)
texture = ExtResource("3_2p1h2")

[node name="Bullet4" type="Sprite2D" parent="Bullet"]
position = Vector2(46.9142, -47.4401)
texture = ExtResource("3_2p1h2")

[node name="Alien4" type="Sprite2D" parent="."]
position = Vector2(30, 204)
rotation = -0.419743
scale = Vector2(0.116933, 0.117524)
skew = 0.040029
texture = ExtResource("4_0hv5d")

[node name="Alien2" type="Sprite2D" parent="Alien4"]
visible = false
position = Vector2(1288.78, -1715.84)
rotation = 0.693501
scale = Vector2(0.543309, 0.582071)
skew = -0.00262761
texture = ExtResource("5_qsbgq")

[node name="Alien 1" type="Sprite2D" parent="Alien4"]
position = Vector2(1005.45, -697.068)
rotation = 0.623237
scale = Vector2(0.817907, 0.76381)
skew = -0.00253224
texture = ExtResource("4_0hv5d")

[node name="Alien4" type="Sprite2D" parent="Alien4"]
position = Vector2(239.238, -930.801)
rotation = -0.42072
scale = Vector2(0.391261, 0.460316)
skew = -0.0819287
texture = ExtResource("5_qsbgq")

[node name="Asteroid4" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, 212)
rotation = -0.19939
scale = Vector2(0.253886, 0.28142)
texture = ExtResource("6_sm0vp")

[node name="Asteroid4" type="Sprite2D" parent="Asteroid4"]
visible = false
position = Vector2(0.581726, -612.558)
rotation = -0.42072
scale = Vector2(0.680349, 0.71312)
skew = -0.0819287
texture = ExtResource("6_sm0vp")

[node name="Asteroid1" type="Sprite2D" parent="."]
visible = false
position = Vector2(112, 64)
rotation = 0.42258
scale = Vector2(0.240625, 0.25625)
texture = ExtResource("6_sm0vp")

[node name="ShipImage" type="Sprite2D" parent="."]
position = Vector2(134.621, 126.358)
rotation = -0.408704
scale = Vector2(0.147464, 0.14351)
texture = ExtResource("7_uqle6")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 9.0
offset_right = 158.0
offset_bottom = 44.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_dtoth")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_074og")
text = "        YOU LOST!"
vertical_alignment = 1
uppercase = true

[node name="Asteroid2" type="Sprite2D" parent="."]
visible = false
position = Vector2(124, 13)
rotation = 0.492797
scale = Vector2(0.0516707, 0.0553297)
texture = ExtResource("9_uyq1r")

[node name="Instrucctions" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 101.0
offset_right = 108.0
offset_bottom = 155.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_dtoth")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_cegan")
text = "WOMP WOMP
Better Luck Next Time!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Alien3" type="Sprite2D" parent="."]
position = Vector2(105, 162)
rotation = 0.21949
scale = Vector2(0.082505, 0.0881665)
skew = 0.00554585
texture = ExtResource("10_mxi48")

[node name="Asteroid3" type="Sprite2D" parent="."]
visible = false
position = Vector2(92.8861, 161.368)
rotation = 0.42258
scale = Vector2(0.0683094, 0.0701067)
texture = ExtResource("9_uyq1r")

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 209.0
offset_right = 155.0
offset_bottom = 228.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("8_dtoth")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_2ps0j")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2edh")
text = "Exit"

[node name="ContinueButon" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 185.0
offset_right = 155.0
offset_bottom = 204.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("8_dtoth")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_2ps0j")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2edh")
text = "Retry"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_6iog5")
autoplay = true

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ContinueButon" to="." method="_on_continue_buton_pressed"]
